force-app/main/default/objects/Placement_Details__c/Placement_Details__c.object-meta.xml
<CustomObject>
    <label>Placement Details</label>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Placement Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placement Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>