force-app/main/default/objects/Placement_Details__c/fields/Candidate_s_full_name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_s_full_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate&apos;s full name</label>
    <referenceTo>Candidate_Details__c</referenceTo>
    <relationshipLabel>Placement Details</relationshipLabel>
    <relationshipName>Placement_Details</relationshipName>
    <type>Lookup</type>
</CustomField>