force-app/main/default/objects/Placement_Details__c/fields/Country_of_Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Work_Location__c</fullName>
    <label>Country of Work Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>