force-app/main/default/objects/Placement_Details__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <length>16</length>
    <type>Text</type>
</CustomField>